--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
     { name = "Jonathan Duarte", email = "devjonathanduarte@gmail.com" }
 ]
 
-requires-python = ">=3.10,<3.12"
+# 🔥 ALTERAÇÃO IMPORTANTE AQUI
+requires-python = ">=3.10,<3.14"
 
 dependencies = [
     "flask==2.2.5",
@@ -19,10 +20,9 @@ dependencies = [
     "werkzeug<2.3",
     "pytest>=9.0.2,<10.0.0",
     "pytest-mock",
-    "gunicorn (>=24.1.1,<25.0.0)",
-    "waitress (>=3.0.2,<4.0.0)"
+    "gunicorn>=24.1.1,<25.0.0",
+    "waitress>=3.0.2,<4.0.0"
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
