--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,7 @@ description = ""
 authors = [
     { name = "Jonathan Duarte", email = "devjonathanduarte@gmail.com" }
 ]
-
-# 🔥 ALTERAÇÃO IMPORTANTE AQUI
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10,<3.12"
 
 dependencies = [
     "flask==2.2.5",
@@ -20,8 +18,8 @@ dependencies = [
     "werkzeug<2.3",
     "pytest>=9.0.2,<10.0.0",
     "pytest-mock",
-    "gunicorn>=24.1.1,<25.0.0",
-    "waitress>=3.0.2,<4.0.0"
+    "gunicorn (>=24.1.1,<25.0.0)",
+    "waitress (>=3.0.2,<4.0.0)"
 ]
 
 [build-system]
